--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^8.2.0",
+    "config": "^3.2.5",
     "express": "^4.17.1",
     "hbs": "^4.1.0",
     "request": "^2.88.0"
